// Copyright 2020 The Measurement Proto Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// References to resources within the public API.

syntax = "proto3";

package wfa.measurement.system.v1alpha;

option java_package = "org.wfanet.measurement.system.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "PublicResourceProto";

// Key for MetricRequisition resource in public API.
//
// TODO(world-federation-of-advertisers/cross-media-measurement#53): Delete once
// `Computation` resource is being used instead of `GlobalComputation`.
message MetricRequisitionKey {
  string data_provider_id = 1;
  string campaign_id = 2;
  string metric_requisition_id = 3;
}
